[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/component/list_entry_item.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="ListItem" type="PanelContainer"]
margin_right = 500.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="MC" type="MarginContainer" parent="."]
margin_right = 500.0
margin_bottom = 42.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HC" type="HBoxContainer" parent="MC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 492.0
margin_bottom = 34.0

[node name="LabelText" type="Label" parent="MC/HC"]
margin_top = 6.0
margin_right = 381.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "-"

[node name="TagsHC" type="HBoxContainer" parent="MC/HC"]
margin_left = 385.0
margin_right = 385.0
size_flags_vertical = 0

[node name="ButtonEdit" type="Button" parent="MC/HC"]
margin_left = 389.0
margin_right = 425.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Edit"

[node name="ButtonDelete" type="Button" parent="MC/HC"]
margin_left = 429.0
margin_right = 484.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Delete"

[connection signal="pressed" from="MC/HC/ButtonEdit" to="." method="_on_ButtonEdit_pressed"]
[connection signal="pressed" from="MC/HC/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
